plugins {
    id 'java-library'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'edu.sc.seis.launch4j' version '3.0.5'
}

def projectVersion = System.getenv("VERSION") ?: '1.0.0'
def runeLiteVersion = 'latest.release'

version = projectVersion
project.version = projectVersion

repositories {
    mavenCentral()
    maven {
        url = "https://repo.runelite.net"
    }
    maven {
        url 'https://jitpack.io'
    }
    mavenLocal()
}

dependencies {
    implementation("com.google.code.gson:gson:2.10.1")
    implementation("com.google.guava:guava:31.1-jre")

    // Required since these need to use system classloader so they can't be included
    // dynamically in the bootstrap.
    implementation("net.bytebuddy:byte-buddy:1.18.4")
    implementation("net.bytebuddy:byte-buddy-agent:1.18.4")

    implementation 'org.slf4j:slf4j-api:1.7.36'
    implementation 'ch.qos.logback:logback-classic:1.2.12'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion

    testImplementation 'junit:junit:4.12'
    testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
    testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
}

processResources {
    inputs.property "version", projectVersion

    filesMatching("kraken-version.properties") {
        expand(version: projectVersion)
    }
}

testing {
    suites {
        test {
            useJUnit('4.13.2')
        }
    }
}

java {
    withSourcesJar()
    withJavadocJar()
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

jar {
    archiveBaseName = 'kraken-launcher'
    archiveVersion = projectVersion
}

shadowJar {
    archiveBaseName = 'kraken-launcher'
    archiveVersion = projectVersion
    archiveClassifier = 'fat'

    manifest {
        attributes(
                'Main-Class': 'com.kraken.launcher.Installer',
                'Premain-Class': 'net.bytebuddy.agent.Installer',
                'Agent-Class': 'net.bytebuddy.agent.Installer',
                'Can-Retransform-Classes': 'true',
                'Can-Redefine-Classes': 'true'
        )
    }
}

// Writes app/build/libs/KrakenSetup.jar.sha256 - the SHA-256 of the fat jar. The fat jar is uploaded to MinIO as
// KrakenSetup.jar (same bytes, just renamed), so this is exactly the checksum the .exe installer downloads to verify
// the jar before installing it as a -javaagent. CI runs this task and uploads the file; run it locally to produce a
// checksum you can upload for testing.
tasks.register('sha256') {
    description = 'Computes the SHA-256 of the fat jar into build/libs/KrakenSetup.jar.sha256'
    group = 'build'
    dependsOn tasks.shadowJar

    def jarProvider = tasks.shadowJar.archiveFile
    def outFile = layout.buildDirectory.file('libs/KrakenSetup.jar.sha256')

    inputs.file(jarProvider)
    outputs.file(outFile)

    doLast {
        def digest = java.security.MessageDigest.getInstance('SHA-256')
        jarProvider.get().asFile.withInputStream { stream ->
            byte[] buffer = new byte[8192]
            int read
            while ((read = stream.read(buffer)) != -1) {
                digest.update(buffer, 0, read)
            }
        }
        def hex = digest.digest().encodeHex().toString()
        def out = outFile.get().asFile
        out.text = hex + '\n'
        logger.lifecycle("Wrote ${out} : ${hex}")
    }
}

launch4j {
    mainClassName = 'com.kraken.launcher.Installer'
    // Use the output of shadowJar (the fat jar) instead of the default thin jar
    copyConfigurable = []
    jarTask = tasks.shadowJar
    manifest = "${projectDir}/src/main/resources/app.manifest"
    outfile = 'KrakenInstaller.exe'
    bundledJrePath = 'jre'
    headerType = 'console'
    stayAlive = true
    errTitle = 'Kraken Launcher Error'
    downloadUrl = 'https://kraken-plugins.com/download'
    supportUrl = "https://kraken-plugins.com/docs/client/download.html"
    companyName = "Kraken Plugins"
    jreMinVersion = '1.11.0'
    icon = "${projectDir}/src/main/resources/favicon.ico"
}
